--- a/client/src/core/generationPanel/ActivityPacketsList.scss
+++ b/client/src/core/generationPanel/ActivityPacketsList.scss
@@ -11,3 +11,7 @@
 .chip {
 	padding-right: 0;
 }
+
+.root {
+	white-space: nowrap;
+}
